crates/tui/tests/snapshots/render_snapshots__account_logged_in_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 1110
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Too Fil Obj Str Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                    ┌ Account ─────────────────────────────────────────────────┐
                    │                                                          │
                    │  ● logged in                                             │
                    │                                                          │
                    │  user:    044d5402                                       │
                    │  org:     00000000                                       │
                    │  project: 00000000                                       │
                    │                                                          │
                    │  [l] login   [o] logout   [r] refresh                    │
                    │  login is non-interactive — use `prism login --token <PAT│
                    │                                                          │
                    │  Esc close                                               │
                    │                                                          │
                    │                                                          │
                    └──────────────────────────────────────────────────────────┘
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
