crates/tui/tests/snapshots/render_snapshots__ansi_injection_sanitized_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Act] Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. prompt "inject ansi" •
▌ inject ansi                                                      │
                                                                   │
◆ PRISM                                                            │
  red text safe BELBSCRDEL                                         │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
