crates/tui/tests/snapshots/render_snapshots__approval_after_a_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Act] Too Fil Obj Str Art
                                                                   │ 1 tools · 1 ✓
❯ You                                                              │
▌ run compute                                                      │  1. prompt "run compute" •
                                                                   │  2. tool compute_submit ✓
· compute_submit: Allow compute_submit?                            │
                                                                   │
· [allow-all compute_submit]                                       │
                                                                   │
· [auto-approve enabled for this session]                          │
                                                                   │
  ✓ [GREEN reference_validated] compute_submit: Job submitted      │
(auto-approved for session)                                        │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
