crates/tui/tests/snapshots/render_snapshots__approval_after_y_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │ 1 tools · 1 ✓
❯ You                                                              │
▌ run compute                                                      │  1. prompt "run compute" •
                                                                   │  2. tool compute_submit ✓
· compute_submit: Allow compute_submit?                            │      Job submitted successfull…
                                                                   │
· [approved compute_submit]                                        │
                                                                   │
  ✓ [GREEN reference_validated] compute_submit: Job submitted      │
successfully (job_id: fake-123)                                    │
    SOURCE NOT REPORTED BY compute_submit                          │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [INPUT]    Ctrl-C quit           │
