crates/tui/tests/snapshots/render_snapshots__approval_destructive_popup_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. prompt "remove the build… •
▌ remove the build directory                                       │
                                                                   │
┌────────────────────────────────────────────────────────────────┐ │
│  ⚠ APPROVAL REQUIRED                                           │ │
│                                                                │ │
│  Tool: execute_bash  —  Allow execute_bash?                    │ │
│  ⚠ reversible: no · 'execute_bash' can write and the call      │ │
│    names 'rm'                                                  │ │
│┌ Arguments — review before answering ─────────────────────────┐│ │
││command: rm -rf build                                         ││ │
│└──────────────────────────────────────────────────────────────┘│ │
│  unlock (type yes or execute_bash): ▏                          │ │
│  [y] Allow once · after unlock   [n/Esc] Deny                  │ │
└────────────────────────────────────────────────────────────────┘ │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│approval pending…  (type yes · then y allow once · n/Esc deny)  │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [APPROVAL]    Ctrl-C quit           │
