crates/tui/tests/snapshots/render_snapshots__approval_execute_bash_popup_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. prompt "clean the build" •
▌ clean the build                                                  │
                                                                   │
· execute_bash: Allow execute_bash?                                │
                                                                   │
┌────────────────────────────────────────────────────────────────┐ │
│  ⚠ APPROVAL REQUIRED                                           │ │
│                                                                │ │
│  Tool: execute_bash  —  Allow execute_bash?                    │ │
│┌ Arguments — review before answering ─────────────────────────┐│ │
││command: cargo clean -p prism-tui                             ││ │
│└──────────────────────────────────────────────────────────────┘│ │
│  [y] Allow   [a] Allow all   [n/Esc] Deny                      │ │
└────────────────────────────────────────────────────────────────┘ │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│tool approval pending…  (y allow · a allow all · n/Esc deny)    │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [APPROVAL]    Ctrl-C quit        │
