crates/tui/tests/snapshots/render_snapshots__approval_popup_with_tool_timeline_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 PRISM v1 · 99 tools ─────────────────────────────────────────────────│ Workspace
· PRISM v1                                                            │ [Activity] Tools  Files
                                                                      │
> sample alloy                                                        │ 1. tool alloy_sample ✓
                                                                      │
⚙ Running alloy_sample                                                │
                                                                      │
⚙ alloy_sample: W0.3 Mo0.2 Ta0.3 Nb0.2                                │
                                                                      │
· compute_submit: Allow compute_submit?                               │
                                                                      │
                                                                      │
                    ┌──────────────────────────────────────────────────────────┐
                    │                                                          │
                    │  ⚠ APPROVAL REQUIRED                                     │
                    │                                                          │
                    │  Tool: compute_submit                                    │
                    └──────────────────────────────────────────────────────────┘
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
                                                                      │
  Ready  model: fake-backend   [APPROVAL]                             │
──────────────────────────────────────────────────────────────────────│
Type a message... (press 'i' to focus input)                          │
                                                                      │
