crates/tui/tests/snapshots/render_snapshots__approval_required_popup_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Activity] Tools Files Objects
                                                                   │
❯ You                                                              │  1. prompt "run compute" •
▌ run compute                                                      │
                                                                   │
· compute_submit: Allow compute_submit?                            │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                    ┌──────────────────────────────────────────────────────────┐
                    │                                                          │
                    │  ⚠ APPROVAL REQUIRED                                     │
                    │                                                          │
                    │  Tool: compute_submit                                    │
                    └──────────────────────────────────────────────────────────┘
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│tool approval pending…  (y allow · a always allow this tool · n d││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [APPROVAL]    Ctrl-C quit           │
