crates/tui/tests/snapshots/render_snapshots__command_palette_filtered_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 1024
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Too Fil Obj Str Art
                                                                   │
┌ Commands ──────────────────────────────────────────────────────┐ │  (no activity yet)
│> tool                                                          │ │
│                                                                │ │
│    reference ▸ Tool catalog            Browse t… opens a panel │ │
│  diagnostics ▸ Show tool permissions   Tool acce… /permissions │ │
│  marketplace ▸ Marketplace install     Install a… opens a form │ │
│  marketplace ▸ Marketplace find        Semantic … opens a form │ │
│   navigation ▸ Workspace: Tools        Switch sidebar to … ←/→ │ │
│  marketplace ▸ Marketplace publish     PRISM's o… opens a form │ │
│  marketplace ▸ Marketplace search      Search do… opens a form │ │
│      display ▸ Mission Control         The laun… opens a panel │ │
│      science ▸ Node stop               Stop t… runs /node stop │ │
│      account ▸ Account                 Platform… opens a panel │ │
│      session ▸ Set goal                Standing … /goal <text> │ │
│   automation ▸ Show workflow           Inspect o… opens a form │ │
│  … 30 more — ↓ to scroll or type to filter                     │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
